--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:site_name" content="Spaceman">
+    <meta property="og:title" content="Spaceman" />
+    <meta property="og:description" content="A wonderful trek through space with all of your heroes and friends" />
+    <meta property="og:image" itemprop="image" content="./favicon.svg">
+    <meta property="og:type" content="website" />
     <title>Spaceman</title>
   </head>
   <body>
