--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
 
     </main>
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./main.ts"></script>
   </body>
 </html>
